# dockernativemanager

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: version.sh
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs  tasks.rs  utils.rs
src-tauri/src/commands/: containers.rs  images.rs  mod.rs  networks.rs  stacks.rs  swarm.rs  system.rs  volumes.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/ui/: sheet.tsx
src/components/volumes/: VolumeFileBrowser.tsx
src/context/: DockerContext.tsx
src/lib/: docker.ts
src/pages/: Containers.tsx  Images.tsx  Index.tsx  Networks.tsx  NotFound.tsx  Stacks.tsx  Swarm.tsx  Volumes.tsx
