[package]
name = "docker-native-manager"
version = "1.4.1"
description = "A powerful, native, and cross-platform GUI for managing Docker environments, containers, and stacks."
authors = ["Pedro Farias"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sysinfo = "0.38.4"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
